style.css
/*!
 * Project_Name: Science Labs
 * Author: Themezy
 * Email: contact@themezy.com
 * Url: http://www.themezy.com
 */
/*=========================================== 
 * Importing CSS Libraries
 *===========================================*/
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section,
summary {
  display: block; }

audio,
canvas,
video {
  display: inline-block; }

audio:not([controls]) {
  display: none;
  height: 0; }

[hidden], template {
  display: none; }

html {
  background: #fff;
  color: #000;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%; }

html,
button,
input,
select,
textarea {
  font-family: sans-serif; }

body {
  margin: 0; }

a {
  background: transparent; }
  a:focus {
    outline: thin dotted; }
  a:hover, a:active {
    outline: 0; }

h1 {
  font-size: 2em;
  margin: 0.67em 0; }

h2 {
  font-size: 1.5em;
  margin: 0.83em 0; }

h3 {
  font-size: 1.17em;
  margin: 1em 0; }

h4 {
  font-size: 1em;
  margin: 1.33em 0; }

h5 {
  font-size: 0.83em;
  margin: 1.67em 0; }

h6 {
  font-size: 0.75em;
  margin: 2.33em 0; }

abbr[title] {
  border-bottom: 1px dotted; }

b,
strong {
  font-weight: bold; }

dfn {
  font-style: italic; }

mark {
  background: #ff0;
  color: #000; }

code,
kbd,
pre,
samp {
  font-family: monospace, serif;
  font-size: 1em; }

pre {
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word; }

q {
  quotes: "\201C" "\201D" "\2018" "\2019"; }

q:before,
q:after {
  content: '';
  content: none; }

small {
  font-size: 80%; }

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline; }

sup {
  top: -0.5em; }

sub {
  bottom: -0.25em; }

img {
  border: 0; }

svg:not(:root) {
  overflow: hidden; }

figure {
  margin: 0; }

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em; }

legend {
  border: 0;
  padding: 0;
  white-space: normal; }

button,
input,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  margin: 0;
  vertical-align: baseline; }

button,
input {
  line-height: normal; }

button,
select {
  text-transform: none; }

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer; }

button[disabled],
input[disabled] {
  cursor: default; }

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0; }

input[type="search"] {
  -webkit-appearance: textfield;
  box-sizing: content-box; }

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none; }

button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0; }

textarea {
  overflow: auto;
  vertical-align: top; }

table {
  border-collapse: collapse;
  width: 100%;
  border-collapse:collapse;
  border-spacing: 5; }

tr {
    padding:2px;
}

td {
    padding:2px;
}


*, *:before, *:after {
  box-sizing: border-box; }

/*
 * Global Styles
 */
html {
  font-size: 15px; }

body {
  color: #383e42fc;
  font-family: "Roboto", "Open Sans", sans-serif;
  font-weight: 300;
  line-height: 1.5; }

h1, h2, h3, h4, h5, h6 {
  font-weight: 700;
  margin: 0 0 20px;
  line-height: normal; }

hr {
  border: none;
  border-bottom: 1px solid #777; }

ul, ol {
  margin: 0;
  padding-left: 0; }

a {
  text-decoration: none;
  color: #6894c7; }

address {
  font-style: normal; }

p {
  margin-top: 0; }

form input, form textarea, form select {
  outline: none;
  border: 1px solid #ccc;
  padding: 10px;
  border-radius: 5px; }
form select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none; }
form textarea {
  resize: vertical; }
form input[type="submit"], form button, form input[type="reset"] {
  border: none;
  background-color: #6894c7; }

/*
 * Reusable Components Style
 */
.button, form input[type="submit"], form button, form input[type="reset"] {
  background: #e7edf1;
  display: inline-block;
  padding: 10px 25px;
  border-radius: 5px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
  color: #8e9ca5;
  -webkit-transition: .3s ease;
          transition: .3s ease; }
  .button.back, form input.back[type="submit"], form button.back, form input.back[type="reset"] {
    margin-bottom: 30px; }
  .button img, form input[type="submit"] img, form button img, form input[type="reset"] img {
    margin-right: 10px; }
  .button:hover, form input[type="submit"]:hover, form button:hover, form input[type="reset"]:hover {
    box-shadow: inset 0 0 100px #6894c7;
    color: white; }
  .button.white, form input.white[type="submit"], form button.white, form input.white[type="reset"] {
    background: white; }

.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
  *zoom: 1; }
  .container:after {
    content: " ";
    clear: both;
    display: block;
    overflow: hidden;
    height: 0; }
  @media (min-width: 768px) {
    .container {
      width: 750px; } }
  @media (min-width: 992px) {
    .container {
      width: 970px; } }
  @media (min-width: 1200px) {
    .container {
      width: 1170px; } }

.container-fluid {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
  *zoom: 1; }
  .container-fluid:after {
    content: " ";
    clear: both;
    display: block;
    overflow: hidden;
    height: 0; }

.row {
  margin-left: 0px;
  margin-right: -15px;
  *zoom: 1; }
  .row:after {
    content: " ";
    clear: both;
    display: block;
    overflow: hidden;
    height: 0; }
/* ... */

